--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
               <div id="icon-list">
                 <ul class="list-inline">
                                     <li class="list-inline-item">
+                    <a href=https://orcid.org/0000-0002-1108-4655>
+                      <button type="button" class="btn btn-outline-dark mb-2">
+                        ORCiD
+                      </button>
+                    </a>
+                  </li>
+                                    <li class="list-inline-item">
                     <a href=https://linkedin.com/in/thomasmwilder/>
                       <button type="button" class="btn btn-outline-dark mb-2">
                         LinkedIn
@@ -105,6 +112,11 @@
             <div class="row justify-content-center align-items-center">
               <div class="col-8 p-1 text-center">
                 <div class="list-group">
+                                    <a href=https://orcid.org/0000-0002-1108-4655>
+                    <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                      ORCiD
+                    </button>
+                  </a>
                                     <a href=https://linkedin.com/in/thomasmwilder/>
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       LinkedIn
