added orcid and MSc title

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p>Supervisors - Dr. Xiaoming Zhai, Dr. Dave Munday, Prof. Manoj Joshi</p>
             <p>Thesis - “Mesoscale eddy-wind interaction”</p>
             <p><strong>The University of Manchester</strong> | Manchester, UK</p>
-            <p>MSc | 2016-2017</p>
+            <p>MSc | Applied Mathematics | 2016-2017</p>
             <p>Dissertation - “Boundary layer separation in a non-axisymmetric container”</p>
             </div>
             <div id="experience" class="section level2">
@@ -150,7 +150,7 @@
               <p>Supervisors - Dr. Xiaoming Zhai, Dr. Dave Munday, Prof. Manoj Joshi</p>
               <p>Thesis - “Mesoscale eddy-wind interaction”</p>
               <p><strong>The University of Manchester</strong> | Manchester, UK</p>
-              <p>MSc | 2016-2017</p>
+              <p>MSc | Applied Mathematics | 2016-2017</p>
               <p>Dissertation - “Boundary layer separation in a non-axisymmetric container”</p>
               </div>
               <div id="experience" class="section level2">
