changed github link and bio

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </a>
                   </li>
                                     <li class="list-inline-item">
-                    <a href=https://github.com/tomwilder>
+                    <a href=https://github.com/thomaswilder>
                       <button type="button" class="btn btn-outline-dark mb-2">
                         GitHub
                       </button>
@@ -75,7 +75,7 @@
             <!-- true crime podcasts, and causal inference. -->
             <div id="bio" class="section level2">
             <h2>Bio</h2>
-            <p>I am a current PhD student at the University of East Anglia who is interested in how surface winds interact with small scale ocean processes. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
+            <p>I am a current PhD student at the University of East Anglia who is working on ocean current-wind interactions at the mesoscale. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
             </div>
             <div id="education" class="section level2">
             <h2>Education</h2>
@@ -122,7 +122,7 @@
                       LinkedIn
                     </button>
                   </a>
-                                    <a href=https://github.com/tomwilder>
+                                    <a href=https://github.com/thomaswilder>
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       GitHub
                     </button>
@@ -141,7 +141,7 @@
               <!-- true crime podcasts, and causal inference. -->
               <div id="bio" class="section level2">
               <h2>Bio</h2>
-              <p>I am a current PhD student at the University of East Anglia who is interested in how surface winds interact with small scale ocean processes. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
+              <p>I am a current PhD student at the University of East Anglia who is working on ocean current-wind interactions at the mesoscale. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
