Update bio and added in publication and skills

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             <!-- true crime podcasts, and causal inference. -->
             <div id="bio" class="section level2">
             <h2>Bio</h2>
-            <p>I am a current PhD student at the University of East Anglia who is working on ocean current-wind interactions at the mesoscale. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
+            <p>I am a final year PhD student at the University of East Anglia working on mesoscale eddy-wind interactions. I am particularly interested in how eddy dynamics change in response to an interaction between winds and ocean currents.</p>
+            <p>When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
             </div>
             <div id="education" class="section level2">
             <h2>Education</h2>
@@ -87,10 +88,16 @@
             <p>MSc | Applied Mathematics | 2016-2017</p>
             <p>Dissertation - “Boundary layer separation in a non-axisymmetric container”</p>
             </div>
+            <div id="publications" class="section level2">
+            <h2>Publications</h2>
+            <p>[In Review] Wilder, T., Zhai, X., Munday, D. and Joshi, M. “The Response of a Baroclinic Anticyclonic Eddy to Relative Wind Stress Forcing”. <strong>Journal of Physical Oceanography</strong>.</p>
+            </div>
             <div id="experience" class="section level2">
             <h2>Experience</h2>
-            <p><strong>Research Cruise</strong> | North Atlantic, 24N</p>
-            <p>Physics team member | 2020</p>
+            <p><strong>Research Cruise</strong></p>
+            <p>GO-SHIP | North Atlantic 24N | Physics team member | 2020</p>
+            <p><strong>Computer Skills</strong></p>
+            <p>MITgcm | MATLAB | Python | LaTeX</p>
             </div>
           </div>
         </div>
@@ -141,7 +148,8 @@
               <!-- true crime podcasts, and causal inference. -->
               <div id="bio" class="section level2">
               <h2>Bio</h2>
-              <p>I am a current PhD student at the University of East Anglia who is working on ocean current-wind interactions at the mesoscale. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
+              <p>I am a final year PhD student at the University of East Anglia working on mesoscale eddy-wind interactions. I am particularly interested in how eddy dynamics change in response to an interaction between winds and ocean currents.</p>
+              <p>When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.</p>
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
@@ -153,10 +161,16 @@
               <p>MSc | Applied Mathematics | 2016-2017</p>
               <p>Dissertation - “Boundary layer separation in a non-axisymmetric container”</p>
               </div>
+              <div id="publications" class="section level2">
+              <h2>Publications</h2>
+              <p>[In Review] Wilder, T., Zhai, X., Munday, D. and Joshi, M. “The Response of a Baroclinic Anticyclonic Eddy to Relative Wind Stress Forcing”. <strong>Journal of Physical Oceanography</strong>.</p>
+              </div>
               <div id="experience" class="section level2">
               <h2>Experience</h2>
-              <p><strong>Research Cruise</strong> | North Atlantic, 24N</p>
-              <p>Physics team member | 2020</p>
+              <p><strong>Research Cruise</strong></p>
+              <p>GO-SHIP | North Atlantic 24N | Physics team member | 2020</p>
+              <p><strong>Computer Skills</strong></p>
+              <p>MITgcm | MATLAB | Python | LaTeX</p>
               </div>
             </div>
         </div>
